Set the default VisualStudio as VS2017

--- a/Engine/Config/BaseEditorPerProjectUserSettings.ini
+++ b/Engine/Config/BaseEditorPerProjectUserSettings.ini
@@ -790,3 +790,6 @@ IncludeColorAdjustment=false
 IncludeVertexProcessingCheck=false
 IncludeWindCheck=false
 IncludeSmoothLODCheck=false
+
+[/Script/SourceCodeAccess.SourceCodeAccessSettings]
+PreferredAccessor=VisualStudio2017
